--- a/_notebooks/2021-11-21-데이터다루기.ipynb
+++ b/_notebooks/2021-11-21-데이터다루기.ipynb
@@ -131,7 +131,7 @@
    "id": "be809f58-1766-40ce-a965-64e940ec4f38",
    "metadata": {},
    "source": [
-    "##### lambda"
+    "#### lambda"
    ]
   },
   {
