--- a/_notebooks/2021-11-21-bd_4주차_1.ipynb
+++ b/_notebooks/2021-11-21-bd_4주차_1.ipynb
@@ -1298,7 +1298,7 @@
    "id": "5c3190a3-a57d-408c-ae22-0b28e0496447",
    "metadata": {},
    "source": [
-    "- 사용한 function"
+    "사용한 function"
    ]
   },
   {
