--- a/_notebooks/2021-11-21-데이터다루기.ipynb
+++ b/_notebooks/2021-11-21-데이터다루기.ipynb
@@ -27,6 +27,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "28783a88-ec4e-4e66-8a94-3a31415e67e2",
+   "metadata": {},
+   "source": [
+    "asdfasdf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f822d760-d321-424a-8b82-edece5c616d1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "41c96370-d0cb-4d04-9bd5-fe96b57623d8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 38,
    "id": "47df3c29-b037-4453-8e75-a564ed82239b",
@@ -1246,7 +1270,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
