--- a/_notebooks/2021-11-21-데이터다루기.ipynb
+++ b/_notebooks/2021-11-21-데이터다루기.ipynb
@@ -35,12 +35,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f822d760-d321-424a-8b82-edece5c616d1",
+   "cell_type": "markdown",
+   "id": "c506602e-fb50-45d8-bac2-05060b4ed722",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "xzfsadf"
+   ]
   },
   {
    "cell_type": "code",
