--- a/_notebooks/2021-12-04-final대비.ipynb
+++ b/_notebooks/2021-12-04-final대비.ipynb
@@ -16,40 +16,72 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7375760-8ffc-4b70-853c-fac2db3e3b0f",
+   "id": "97d4faba-3b23-4f28-af69-aff5e910f29d",
    "metadata": {},
    "source": [
-    " 지리정보시각화(지도가 포함된 시각화) 는 미리 공개한 문제에서만 나옵니다. (따라서 예상문제를 보고 답안을 미리 작성해도 상관없습니다)ㅡ"
+    "### wideform / longform"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0e7e1646-5c0a-47c5-abd1-500c30a2718b",
+   "id": "fbec51fe-e789-4904-9484-da5bbb4ea185",
    "metadata": {},
    "source": [
-    "- wideform / longform\n",
-    "- stack(), reset_index(), melt(), set_index()\n",
-    "- groupby()\n",
-    "- map(), applymap(), lambda\n",
-    "- pipe()\n",
-    "- pandas backend를 이용한 plot은 아주 잘 숙지하고 계셔야합니다."
+    "### stack(), reset_index(), melt(), set_index()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9f84f2a2-2683-4213-902d-752493d832c0",
+   "id": "8bdd8e51-76f4-413c-a6a7-83288158ba5f",
    "metadata": {},
    "source": [
-    "- ggplot을 이용한 고난도 문제가 출제될 수 있습니다.\n",
-    "- pandas backend를 이용한 plot은 아주 잘 숙지하고 계셔야합니다."
+    "### groupby()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9067a290-ad0b-427b-bb40-63bd45ba697c",
+   "cell_type": "markdown",
+   "id": "aebffcd4-950a-45f5-9e84-00ae92f32f05",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "### map(), applymap(), lambda"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "581ed4cb-8182-4a88-aecd-b72d04210f79",
+   "metadata": {},
+   "source": [
+    "### pipe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "64a0ba06-3ff0-478d-b6a1-e0039cca6eb4",
+   "metadata": {},
+   "source": [
+    "### pandas backend를 이용한 plot은 아주 잘 숙지하고 계셔야합니다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a5199df4-5fd6-4ad3-ac11-cd6b3f0a5519",
+   "metadata": {},
+   "source": [
+    "### ggplot을 이용한 고난도 문제가 출제될 수 있습니다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "afb97e66-ea8d-4d84-a374-45581718e235",
+   "metadata": {},
+   "source": [
+    "### pandas backend를 이용한 plot은 아주 잘 숙지하고 계셔야합니다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c11dc244-ea90-4029-8985-130897622f85",
+   "metadata": {},
    "source": []
   }
  ],
