--- a/_notebooks/2021-10-25-데시_7주차_1.ipynb
+++ b/_notebooks/2021-10-25-데시_7주차_1.ipynb
@@ -8,7 +8,7 @@
    },
    "source": [
     "# 데이터시각화 특강 (7주차) 10월25일 _1\n",
-    "> Partial correlation, 행을선택하는 방법, fifa22자료 시각화 \n",
+    "> Partial correlation\n",
     "\n",
     "- toc:true\n",
     "- branch: master\n",
