--- a/_notebooks/2021-11-01-데시_8주차_1.ipynb
+++ b/_notebooks/2021-11-01-데시_8주차_1.ipynb
@@ -8,7 +8,7 @@
    },
    "source": [
     "# 데이터시각화 특강 (8주차) 11월1일 _1\n",
-    "> groupby, tidydata, barplot, 해들리위컴의 그래프레이어, 심슨의역설\n",
+    "> groupby, tidydata\n",
     "\n",
     "- toc:true\n",
     "- branch: master\n",
