--- a/_notebooks/2021-11-01-데시_8주차_2.ipynb
+++ b/_notebooks/2021-11-01-데시_8주차_2.ipynb
@@ -8,14 +8,14 @@
    },
    "source": [
     "# 데이터시각화 특강 (8주차) 11월1일 _2\n",
-    "> groupby, tidydata, barplot, 해들리위컴의 그래프레이어, 심슨의역설\n",
+    "> barplot, 해들리위컴의 그래프레이어, 심슨의역설\n",
     "\n",
     "- toc:true\n",
     "- branch: master\n",
     "- badges: true\n",
     "- comments: false\n",
     "- author: 최서연\n",
-    "- categories: [해들리위컴의 그래프레이어, 심슨의역설]"
+    "- categories: [barplot, 해들리위컴의 그래프레이어, 심슨의역설]"
    ]
   },
   {
