--- a/_notebooks/2021-10-18-데시_6주차.ipynb
+++ b/_notebooks/2021-10-18-데시_6주차.ipynb
@@ -15,7 +15,8 @@
     "- branch: master\n",
     "- badges: true\n",
     "- comments: false\n",
-    "- author: 최서연"
+    "- author: 최서연\n",
+    "- categories: [해들리위컴 그래프레이어, 판다스에서 열을 선택하는 방법, 깃허브파일불러오기]"
    ]
   },
   {
@@ -42,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "5765ea0e-0c7e-4816-850c-bf29bb975561",
    "metadata": {
     "id": "5765ea0e-0c7e-4816-850c-bf29bb975561"
@@ -85,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "75cb2c02-6389-4570-b281-d07ff0176b3b",
    "metadata": {
     "id": "75cb2c02-6389-4570-b281-d07ff0176b3b"
@@ -97,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "57519d93-6492-436a-97d0-0b3e51851453",
    "metadata": {
     "id": "57519d93-6492-436a-97d0-0b3e51851453"
@@ -109,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "a0ab5409-854f-48ec-ac63-60c69d0f92a4",
    "metadata": {
     "id": "a0ab5409-854f-48ec-ac63-60c69d0f92a4",
@@ -133,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "37b5417c-61da-4d11-af51-598477a1bb7b",
    "metadata": {
     "id": "37b5417c-61da-4d11-af51-598477a1bb7b",
@@ -141,47 +142,27 @@
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'a' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_2170811/2167009006.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ma\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'a' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] 1 2 3\n"
      ]
     }
    ],
    "source": [
+    "%%R\n",
     "a"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "fdc8289c-7125-4ffd-9d7b-2ca67afd6901",
    "metadata": {
     "id": "fdc8289c-7125-4ffd-9d7b-2ca67afd6901",
     "outputId": "dbd1fd4d-94b0-41cb-f3f2-3788b34619c4"
    },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "R[write to console]: ── Attaching packages ─────────────────────────────────────── tidyverse 1.3.1 ──\n",
-      "\n",
-      "R[write to console]: ✔ ggplot2 3.3.5     ✔ purrr   0.3.4\n",
-      "✔ tibble  3.1.3     ✔ dplyr   1.0.7\n",
-      "✔ tidyr   1.1.3     ✔ stringr 1.4.0\n",
-      "✔ readr   1.4.0     ✔ forcats 0.5.1\n",
-      "\n",
-      "R[write to console]: ── Conflicts ────────────────────────────────────────── tidyverse_conflicts() ──\n",
-      "✖ dplyr::filter() masks stats::filter()\n",
-      "✖ dplyr::lag()    masks stats::lag()\n",
-      "\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -211,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "f5b01d76-ba69-4baf-ab1f-a6ad656bdb6e",
    "metadata": {
     "id": "f5b01d76-ba69-4baf-ab1f-a6ad656bdb6e",
@@ -219,24 +200,34 @@
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'mpg' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_2170811/602803287.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmpg\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'mpg' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# A tibble: 234 × 11\n",
+      "   manufacturer model      displ  year   cyl trans drv     cty   hwy fl    class\n",
+      "   <chr>        <chr>      <dbl> <int> <int> <chr> <chr> <int> <int> <chr> <chr>\n",
+      " 1 audi         a4           1.8  1999     4 auto… f        18    29 p     comp…\n",
+      " 2 audi         a4           1.8  1999     4 manu… f        21    29 p     comp…\n",
+      " 3 audi         a4           2    2008     4 manu… f        20    31 p     comp…\n",
+      " 4 audi         a4           2    2008     4 auto… f        21    30 p     comp…\n",
+      " 5 audi         a4           2.8  1999     6 auto… f        16    26 p     comp…\n",
+      " 6 audi         a4           2.8  1999     6 manu… f        18    26 p     comp…\n",
+      " 7 audi         a4           3.1  2008     6 auto… f        18    27 p     comp…\n",
+      " 8 audi         a4 quattro   1.8  1999     4 manu… 4        18    26 p     comp…\n",
+      " 9 audi         a4 quattro   1.8  1999     4 auto… 4        16    25 p     comp…\n",
+      "10 audi         a4 quattro   2    2008     4 manu… 4        20    28 p     comp…\n",
+      "# … with 224 more rows\n"
      ]
     }
    ],
    "source": [
+    "%%R\n",
     "mpg"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "4619647d-25d4-452b-9fe4-aa5e53990e17",
    "metadata": {
     "id": "4619647d-25d4-452b-9fe4-aa5e53990e17"
@@ -248,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "05325a89-6bc7-4b4f-9374-8664a0471777",
    "metadata": {
     "id": "05325a89-6bc7-4b4f-9374-8664a0471777",
@@ -500,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "6f2db31e-3aad-483a-81ff-bca3d5b8f12f",
    "metadata": {
     "id": "6f2db31e-3aad-483a-81ff-bca3d5b8f12f"
@@ -512,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "51aaf5f2-1873-4e52-a73d-fde8740566cc",
    "metadata": {
     "id": "51aaf5f2-1873-4e52-a73d-fde8740566cc",
@@ -787,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "76efeb7c-2af1-4b87-ae9b-a9dcfdd065e2",
    "metadata": {
     "id": "76efeb7c-2af1-4b87-ae9b-a9dcfdd065e2"
@@ -799,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "8b3a5ef8-c5b3-480c-b4cd-8305f6fd3cce",
    "metadata": {
     "id": "8b3a5ef8-c5b3-480c-b4cd-8305f6fd3cce",
@@ -1062,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "24ec8240-7c36-4ca2-bd17-cf23c0b193df",
    "metadata": {
     "id": "24ec8240-7c36-4ca2-bd17-cf23c0b193df",
@@ -10227,7 +10218,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
