--- a/_notebooks/2021-10-25-데시_7주차_3.ipynb
+++ b/_notebooks/2021-10-25-데시_7주차_3.ipynb
@@ -20,6 +20,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0cc71cd7-11e4-44dc-b367-c0f40db3b98b",
+   "metadata": {},
+   "source": [
+    "- kaggle 에서 fifa22 검색, fifa official data set 들어가서 fifa22 다운"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6ca2532b-6d9a-43c0-9fec-7c5ba1c0d0d7",
    "metadata": {},
    "source": [
