--- a/_notebooks/2021-12-05-데시_final대비.ipynb
+++ b/_notebooks/2021-12-05-데시_final대비.ipynb
@@ -1127,18 +1127,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6680549d-519d-4617-8845-2bb52467b72f",
-   "metadata": {},
-   "source": [
-    "### pandas backend를 이용한 plot은 아주 잘 숙지하고 계셔야합니다."
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "39b304ce-3039-4ddf-b1b9-b12b3c1ae18f",
    "metadata": {},
    "source": [
     "### ggplot을 이용한 고난도 문제가 출제될 수 있습니다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6680549d-519d-4617-8845-2bb52467b72f",
+   "metadata": {},
+   "source": [
+    "### pandas backend를 이용한 plot은 아주 잘 숙지하고 계셔야합니다."
    ]
   },
   {
@@ -1379,9 +1379,11 @@
          "name": "Africa",
          "offsetgroup": "Africa",
          "orientation": "v",
+         "selectedpoints": [],
          "showlegend": true,
          "textposition": "auto",
          "type": "bar",
+         "visible": true,
          "x": [
           "Africa"
          ],
@@ -1404,6 +1406,7 @@
          "name": "Bangladesh",
          "offsetgroup": "Bangladesh",
          "orientation": "v",
+         "selectedpoints": [],
          "showlegend": true,
          "textposition": "auto",
          "type": "bar",
@@ -1429,6 +1432,7 @@
          "name": "China",
          "offsetgroup": "China",
          "orientation": "v",
+         "selectedpoints": [],
          "showlegend": true,
          "textposition": "auto",
          "type": "bar",
@@ -1454,6 +1458,7 @@
          "name": "East Asia",
          "offsetgroup": "East Asia",
          "orientation": "v",
+         "selectedpoints": [],
          "showlegend": true,
          "textposition": "auto",
          "type": "bar",
@@ -1479,6 +1484,7 @@
          "name": "Europe",
          "offsetgroup": "Europe",
          "orientation": "v",
+         "selectedpoints": [],
          "showlegend": true,
          "textposition": "auto",
          "type": "bar",
@@ -1504,6 +1510,7 @@
          "name": "Germany",
          "offsetgroup": "Germany",
          "orientation": "v",
+         "selectedpoints": [],
          "showlegend": true,
          "textposition": "auto",
          "type": "bar",
@@ -1529,6 +1536,7 @@
          "name": "India",
          "offsetgroup": "India",
          "orientation": "v",
+         "selectedpoints": [],
          "showlegend": true,
          "textposition": "auto",
          "type": "bar",
@@ -1554,6 +1562,7 @@
          "name": "Japan",
          "offsetgroup": "Japan",
          "orientation": "v",
+         "selectedpoints": [],
          "showlegend": true,
          "textposition": "auto",
          "type": "bar",
@@ -1579,6 +1588,7 @@
          "name": "North America",
          "offsetgroup": "North America",
          "orientation": "v",
+         "selectedpoints": [],
          "showlegend": true,
          "textposition": "auto",
          "type": "bar",
@@ -1604,6 +1614,7 @@
          "name": "Russia",
          "offsetgroup": "Russia",
          "orientation": "v",
+         "selectedpoints": [],
          "showlegend": true,
          "textposition": "auto",
          "type": "bar",
@@ -1629,6 +1640,7 @@
          "name": "South and Southeast Asia",
          "offsetgroup": "South and Southeast Asia",
          "orientation": "v",
+         "selectedpoints": [],
          "showlegend": true,
          "textposition": "auto",
          "type": "bar",
@@ -1654,6 +1666,7 @@
          "name": "United States",
          "offsetgroup": "United States",
          "orientation": "v",
+         "selectedpoints": [],
          "showlegend": true,
          "textposition": "auto",
          "type": "bar",
@@ -1679,6 +1692,7 @@
          "name": "West Asia",
          "offsetgroup": "West Asia",
          "orientation": "v",
+         "selectedpoints": [],
          "showlegend": true,
          "textposition": "auto",
          "type": "bar",
@@ -1695,6 +1709,7 @@
        "layout": {
         "autosize": true,
         "barmode": "relative",
+        "dragmode": "select",
         "legend": {
          "title": {
           "text": "Entity"
@@ -2548,6 +2563,7 @@
           -0.5,
           12.5
          ],
+         "showspikes": false,
          "title": {
           "text": "Entity"
          },
@@ -2564,6 +2580,7 @@
           0,
           1787433.6842105263
          ],
+         "showspikes": false,
          "title": {
           "text": "Excess mortality from fossil fuels"
          },
