--- a/_notebooks/2021-12-07_데시_기말ver0.6.ipynb
+++ b/_notebooks/2021-12-07_데시_기말ver0.6.ipynb
@@ -8,14 +8,15 @@
     "tags": []
    },
    "source": [
-    "# 기말고사 예상문제 (ver 0.6)\n",
+    "# 데이터시각화 특강 기말 예상문제 (ver 0.6)\n",
     "> \n",
     "\n",
     "- toc:false\n",
     "- branch: master\n",
     "- badges: true\n",
-    "- comments: true\n",
-    "- author: 최규빈"
+    "- comments: false\n",
+    "- author: 최서연\n",
+    "- categories: [final]"
    ]
   },
   {
