--- a/_notebooks/2021-12-08-면담.ipynb
+++ b/_notebooks/2021-12-08-면담.ipynb
@@ -8,7 +8,7 @@
     "tags": []
    },
    "source": [
-    "# 면담.. 공부하기..20211208\n",
+    "# 면담 때 배운 거.. 공부..20211208\n",
     "> \n",
     "\n",
     "- toc:false\n",
@@ -16,7 +16,7 @@
     "- badges: true\n",
     "- comments: false\n",
     "- author: 최서연\n",
-    "- categories: [final]"
+    "- categories: [list, pd.DateFrame]"
    ]
   },
   {
