--- a/_notebooks/2021-12-12-기말고사_대비요령_업뎃.ipynb
+++ b/_notebooks/2021-12-12-기말고사_대비요령_업뎃.ipynb
@@ -61,6 +61,47 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fb95fb58-fe88-4ea8-b4d9-451526217164",
+   "metadata": {},
+   "source": [
+    "#### groupby()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "id": "a4c7d7cd-9abf-4bf1-aeca-6ba14a20bfa9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# collapse\n",
+    "df=pd.read_csv('https://raw.githubusercontent.com/PacktPublishing/Pandas-Cookbook/master/data/flights.csv')\n",
+    "grouped_df = df.groupby(by='AIRLINE')\n",
+    "list(grouped_df.groups)\n",
+    "grouped_df.get_group('AA')\n",
+    "for g in grouped_df.groups:\n",
+    "    print(g)\n",
+    "    display(grouped_df.get_group(g))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "03732f89-bb9f-41e8-b0de-8c1760426f06",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d83efd5-18d4-42dc-9df6-1ecf95f9aba3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "b18548f6-d67e-4520-a1cc-261015b9cb77",
    "metadata": {
     "jp-MarkdownHeadingCollapsed": true,
@@ -436,6 +477,7 @@
    "cell_type": "markdown",
    "id": "07cb18b4-6d1d-4022-84ef-660b63c2ef76",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
