--- a/_notebooks/2021-12-14-timeseries.ipynb
+++ b/_notebooks/2021-12-14-timeseries.ipynb
@@ -20,6 +20,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "07552da1-81fb-4763-b568-1616053366a7",
+   "metadata": {},
+   "source": [
+    "sdfasdf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0119c0d3-aaf9-4e11-a270-ac167476304b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "6462ff0d-c66b-43e3-9ee7-b946329cdbaa",
    "metadata": {},
    "source": [
