--- a/_notebooks/2021-12-08-면담.ipynb
+++ b/_notebooks/2021-12-08-면담.ipynb
@@ -16,7 +16,7 @@
     "- badges: true\n",
     "- comments: false\n",
     "- author: 최서연\n",
-    "- categories: [list, pd.DateFrame]"
+    "- categories: [list, pdDateFrame]"
    ]
   },
   {
